# trmnl_django_server

./: Dockerfile  assets_files.txt  docker-compose.yml  pyproject.toml
byos_django/: settings.py  urls.py
etc/: nginx.conf
plugins/: __init__.py  admin.py  base.py  models.py  recipe.py  utils.py
plugins/idfm_metro/: __init__.py  plugin.py
plugins/migrations/: 0001_initial.py  0002_plugin_config.py  0003_alter_plugin_config_alter_plugin_plugin_class.py  0004_rename_plugin_class_plugin_recipe.py  0005_plugin_uuid_alter_plugin_name_alter_plugin_recipe.py  0006_remove_plugin_id_alter_plugin_uuid.py
plugins/templates/idfm_metro/: full.html
plugins/whos-that-pokemon/: __init__.py  plugin.py
plugins/whos_that_pokemon/: __init__.py  plugin.py
templates/: base.html  live_preview.html
trmnl/: admin.py  consumers.py  models.py  views.py
trmnl/migrations/: 0005_apikey_updated_at_devicelog_updated_at_and_more.py  0006_alter_playlist_weekdays.py  0007_playlistitem_is_active_screen_playlist_item_and_more.py  0008_alter_apikey_options_alter_device_options_and_more.py  0009_playlist_name.py
trmnl/models/: __init__.py  device.py  playlist.py  screen.py
trmnl/static/css/: plugins.css
trmnl/static/js/: plugins.js
trmnl/templates/: screen.html
utils/: weekday_field.py
