[project]
name = "trmnl-django-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.0",
    "daphne>=4.1.2",
    "django>=5.1.7",
    "django-tasks-scheduler>=3.0.0",
    "playwright~=1.50.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "wand>=0.6.13",
]
